# web-scraping-101-lecture

./: 00-dev-environment-test.ipynb  01-web-crawler-with-Amazon.ipynb  02-api-request-with-pokeapi.ipynb  README.md  pyproject.toml  requirements.txt
